# ads

./: README.md  digital-advertising-env.py  ideaVim.txt  ppo.py  pyproject.toml  tests.py
.devcontainer/: devcontainer.json
data/: preprocessed.csv  search_trends_raw.csv
env/: ad_optimization.py  transforms.py
preprocess/: preprocess_trends.py
